feat: started working on consumer

--- a/BankMore.Tariffs.Application/BankMore.Tariffs.Application.csproj
+++ b/BankMore.Tariffs.Application/BankMore.Tariffs.Application.csproj
@@ -1,3 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
 
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
+    </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="KafkaFlow"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions"/>
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder"/>
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\BankMore.Tariffs.Domain\BankMore.Tariffs.Domain.csproj" />
+    </ItemGroup>
 </Project>
