--- a/BankMore.Tariffs.Web/BankMore.Tariffs.Web.csproj
+++ b/BankMore.Tariffs.Web/BankMore.Tariffs.Web.csproj
@@ -1,18 +1,33 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
+        <TargetFramework>net8.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+
+        <IsPackable>false</IsPackable>
+        <IsTestProject>true</IsTestProject>
+    </PropertyGroup>
+    
+    <PropertyGroup>
       <RootNamespace>BankMore.Tariffs.Web</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.OpenApi"/>
         <PackageReference Include="Swashbuckle.AspNetCore"/>
+
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BankMore.Tariffs.Application\BankMore.Tariffs.Application.csproj" />
+      <ProjectReference Include="..\BankMore.Tariffs.Infrastructure\BankMore.Tariffs.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
