--- a/BankMore.Tariffs.Web/appsettings.json
+++ b/BankMore.Tariffs.Web/appsettings.json
@@ -5,5 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "Database:ConnectionString": "Data Source=/app/data/tarifas.db",
+  "AllowedHosts": "*",
+  "Tariff": {
+    "Value": "2.00"
+  },
+  "Kafka": {
+    "Brokers": "cp-kafka:9094",
+    "CompletedTransfersTopic": "completed-transfers",
+    "CompletedFeeChargesTopic": "completed-fee-charges",
+    "NumberOfPartitions": 1,
+    "ReplicationFactor": 1
+  }
 }
