--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,21 +1,30 @@
 <Project>
     <ItemGroup>
-        <PackageVersion Include="Dapper" Version="2.1.0" />
-        <PackageVersion Include="Mediator.SourceGenerator" Version="3.1.0" />
-        <PackageVersion Include="Mediator.Abstractions" Version="3.1.0" />
-        <PackageVersion Include="Microsoft.Data.Sqlite" Version="10.0.0" />
-        <PackageVersion Include="xunit.v3" Version="3.2.2" />
-        <PackageVersion Include="StackExchange.Redis" Version="2.10.1" />
-        <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2" />
-        <PackageVersion Include="KafkaFlow" Version="3.2.0" />
-        <PackageVersion Include="KafkaFlow.Microsoft.DependencyInjection" Version="3.2.0" />
-        <PackageVersion Include="KafkaFlow.Serializer.Json" Version="3.2.0" />
-        <PackageVersion Include="KafkaFlow.LogHandler.Console" Version="3.2.0" />
-        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22" />
-        <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2" />
-        <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.18.0.131500" />    
-        <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5" />
+        <PackageVersion Include="Dapper" Version="2.1.1"/>
+        <PackageVersion Include="Mediator.SourceGenerator" Version="3.1.0"/>
+        <PackageVersion Include="Mediator.Abstractions" Version="3.1.0"/>
+        <PackageVersion Include="Microsoft.Data.Sqlite" Version="10.0.0"/>
+        <PackageVersion Include="xunit.v3" Version="3.2.2"/>
+        <PackageVersion Include="StackExchange.Redis" Version="2.10.1"/>
+        <PackageVersion Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.2"/>
+        <PackageVersion Include="KafkaFlow" Version="4.1.0"/>
+        <PackageVersion Include="KafkaFlow.Abstractions" Version="4.1.0"/>
+        <PackageVersion Include="KafkaFlow.Microsoft.DependencyInjection" Version="4.1.0"/>
+        <PackageVersion Include="KafkaFlow.Extensions.Hosting" Version="4.1.0"/>
+        <PackageVersion Include="KafkaFlow.Serializer.JsonCore" Version="4.1.0"/>
+        <PackageVersion Include="KafkaFlow.TypedHandler" Version="2.5.1"/>
+        <PackageVersion Include="KafkaFlow.LogHandler.Console" Version="4.1.0"/>
+        <PackageVersion Include="Microsoft.AspNetCore.OpenApi" Version="8.0.22"/>
+        <PackageVersion Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageVersion Include="SonarAnalyzer.CSharp" Version="10.18.0.131500"/>
+        <PackageVersion Include="xunit.runner.visualstudio" Version="2.4.5"/>
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.0"/>
         <PackageVersion Include="coverlet.collector" Version="6.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Options" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="8.0.0"/>
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="10.0.0"/>
     </ItemGroup>
 </Project>
